# BraccioSORT

./: IMPLEMENTATION.md  README.md  Readme.md
braccio_description/: CMakeLists.txt  package.xml
braccio_description/config/: braccio_controllers.yaml
braccio_description/launch/: display.launch.py
braccio_description/rviz/: braccio.rviz  braccio_sorting.rviz  braccio_with_camera.rviz  moveit.rviz  urdf.rviz
braccio_description/urdf/: braccio.urdf.xacro
braccio_gazebo/: CMakeLists.txt  package.xml
braccio_gazebo/config/: gz_bridge.yaml
braccio_gazebo/launch/: braccio.launch.py  braccio_gazebo.launch.py
braccio_gazebo/scripts/: activate_controllers.sh
braccio_gazebo/worlds/: braccio_sorting.world
braccio_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
braccio_moveit_config/config/: braccio.ros2_control.xacro  braccio.srdf  braccio.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
braccio_yolo_sorting/: package.xml  setup.cfg  setup.py
braccio_yolo_sorting/braccio_yolo_sorting/: braccio_moveit_sorting_controller.py  yolo_detector_node.py
braccio_yolo_sorting/launch/: braccio_moveit_sorting.launch.py
