<?xml version="1.0"?>
<package format="3">
  <name>braccio_yolo_sorting</name>
  <version>0.1.0</version>
  <description>MoveIt-based YOLO sorting for Braccio</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- MoveIt Dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>

  <exec_depend>braccio_gazebo</exec_depend>
  <exec_depend>braccio_moveit_config</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>